[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "logging_tracker"
authors = [{ name = "aocana", email = "aocana@lanacion.com.ar" }]
description = "Logger Lanacion Universal GCP"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["google-cloud-logging"]
